# FCIP

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml  research_fpga_ml.md
docker/: Dockerfile.backend  Dockerfile.frontend
docker/entrypoints/: backend.sh
docs/: api_reference.md  architecture.md  database_schema.md  installation_guide.md  known_issues.md  product_pitch.md
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: client.ts  experiments.ts  predictions.ts  projects.ts  recommendations.ts  reports.ts
frontend/src/pages/: ComparePage.tsx  ExperimentDetailPage.tsx  ExperimentsPage.tsx  PredictionsPage.tsx  ProjectsPage.tsx  RecommendationsPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  formatters.ts
scripts/: create_tables.py  generate_synthetic_data.py  setup_dev.sh  train_models.py
scripts/deprecated/: harvest_hlsfactory.py  train_on_hlsfactory.py
tests/: conftest.py
tests/data/malformed/: corrupted_timing.rpt  partial_utilization.rpt
tests/data/quartus/: timing_report_failed.rpt  timing_report_good.rpt  utilization_report_good.rpt
tests/data/vivado/: timing_report_failed.rpt  timing_report_good.rpt  utilization_report_good.rpt  (+1 more)
tests/integration/: test_api.py
tests/performance/: test_perf.py
tests/unit/: test_harvest.py  test_predictor.py  test_recommender.py  test_registry.py
(+9 files in other folders)
