[project]
name = "fcip"
version = "0.1.0"
requires-python = ">=3.12"
description = "FPGA Compile Intelligence Platform"

[tool.uv.workspace]
members = [
    "packages/shared",
    "packages/parsers",
    "packages/predictor",
    "packages/recommender",
    "packages/backend",
    "packages/cli",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "respx>=0.21",
    "httpx>=0.27",
    "psutil>=6.0",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:joblib"]
